fix: Add word-wrap to prevent numbers from overflowing when too many digits
also removed some unncessesary flexbox and grid usage

--- a/style.css
+++ b/style.css
@@ -19,8 +19,6 @@
     border: 1px solid black;
     width: 300px;
     padding: 5px;
-    display: flex;
-    flex-direction: column;
 }
 
 #display {
@@ -28,20 +26,17 @@
     padding: 4px;
     border: 1px solid black;
     width: 100%;
-    display: grid;
-    grid-template-rows: 1fr 2fr;
 }
 
 .previous-input {
-    min-height: 100%;
     color: rgb(65, 65, 65);
     font-size: 16px;
-    text-align: end;
 }
 
 .input {
     text-align: end;
     align-self: end;
+    word-wrap: break-word;
 }
 
 #buttons {
